--- a/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -5,7 +5,9 @@
                 <div *ngFor="let tempProduct of products" class="col-md-3">
                     
                     <div class="product-box">
-                        <img src="{{tempProduct.image_url}}" class="image-responsive">
+                        <a routerLink="/products/{{tempProduct.id}}">
+                            <img src="{{tempProduct.image_url}}" class="image-responsive">
+                        </a>
                         <h1>{{tempProduct.name}}</h1>
                         <div class="price">{{tempProduct.unit_price | currency : 'USD'}}</div>
                         <a href="#" class="primary-btn">Add to Cart</a>
