--- a/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -10,7 +10,7 @@
                         </a>
                         <h1>{{tempProduct.name}}</h1>
                         <div class="price">{{tempProduct.unit_price | currency : 'USD'}}</div>
-                        <a href="#" class="primary-btn">Add to Cart</a>
+                        <button (click)="addToCart(tempProduct)" class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
 
                 </div>
