--- a/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -49,6 +49,7 @@
                         <p>Total Quantity: {{totalQuantity}}</p>
                         <p>Shipping: FREE</p>
                         <p>Total Price: {{totalPrice}}</p>
+                        <a routerLink="/checkout" class="btn btn-primary">Checkout</a>
                     </td>
                 </tr>
             </table>
