form components - drop downs

--- a/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -43,8 +43,10 @@
                         <div class="col-md-2"><label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change) = "getSatates('shippingAddress')">
+                                    <option *ngFor = "let country of countries" [ngValue]="country">
+                                        {{country.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -73,7 +75,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor= "let state of shippingAddressStates" [ngValue]= "state">
+                                        {{state.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -93,7 +97,7 @@
                 <!--Add check box to copy shipping address to billing address-->
                 <div class="input-space">
                     <label class="au-checkbox">
-                        <input type="checkbox" (change)="copyShippingAddressToBillingAddress($event)">
+                        <input type="checkbox" (change)= "copyShippingAddressToBillingAddress($event)">
                         <span class="au-checkmark"></span>Billing Address Same as Shipping Address
                     </label>
                 </div>
@@ -105,8 +109,10 @@
                         <div class="col-md-2"><label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change)= "getSatates('billingAddress')">
+                                    <option *ngFor= "let country of countries" [ngValue]= "country">
+                                        {{country.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -135,7 +141,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let state of billingAddressStates" [ngValue]="state">
+                                        {{state.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -199,6 +207,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
+                                    <option *ngFor="let tempMonth of creditCardMonths">
+                                        {{tempMonth}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -208,7 +219,10 @@
                         <div class="col-md-2"><label>Expiration Year</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="expirationYear">
+                                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
+                                    <option *ngFor="let year of creditCardYears">
+                                        {{year}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
